k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cityflow-frontend
  namespace: cityflow
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: cityflow
spec:
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: cityflow
  ports:
    - port: 80
      targetPort: http
      name: http
